--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Pillow
-numpy
-fastapi
+numpy==1.24.3  # Compatible with TensorFlow 2.13.1
+fastapi==0.95.0  # Compatible with typing-extensions 4.5.0
 uvicorn
-typing-extensions
-pydantic
+typing-extensions==4.5.0  # Compatible with TensorFlow 2.13.1
+pydantic==1.10.2  # Compatible with fastapi 0.95.0
 tensorflow==2.13.1
 python-multipart
